Added array type